fix alignment of text for multiline activity

--- a/views/assets/src/helpers/less/customization/pm-overview.less
+++ b/views/assets/src/helpers/less/customization/pm-overview.less
@@ -1143,3 +1143,12 @@ div#pm-calender-page .project-select-area .form-content-wrap {
 #wedevs-project-manager select.monthselect.col {
     height: 38px!important;
 }
+
+// PM frontend Tasks > Activities page
+#wedevs-project-manager.pm-page-wrapper .pm-my-tasks .mytask-activity .pm-activity-list .pm-activity-body li div {
+    margin-left: 15px;
+}
+
+#wedevs-project-manager.pm-page-wrapper .pm-my-tasks .mytask-activity .pm-activity-list .pm-activity-body li div span:first-of-type {
+    margin-left: -10px !important;
+}
